# PCP

./: .gitignore  CMakeLists.txt  borboleta.sh  tempos.txt
borboleta/: CMakeLists.txt  README.md  borboleta.sh  main.c  main.h  manager.h  messages.h  my_sockets.c  my_sockets.h  server.c  server.h  worker.c  worker.h
borboleta/src/: manager.c  messages.c  my_sockets.h
cuda/: CMakeLists.txt  README.md  cuda  run_cuda.sh  tempos_CUDA.txt
cuda/src/: integral_dupla.cu  integral_dupla.h
mpi/: CMakeLists.txt  README.md  mpi  run_mpi.sh  tempos_MPI.txt
mpi/src/: integral_dupla.c  integral_dupla.h
openMP/: CMakeLists.txt  README.md
openMP/src/: integral_dupla.c  integral_dupla.h
